<resources>
    <string name="app_name">FSpace</string>
    <string name="addNewPost">Add new post</string>
    <string name="myProfile">My profile</string>
    <string name="homepage">Home</string>
    <string name="friends">Friends</string>
    <string name="searchFriend">Search friends</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="drawerOpen">Drawer Open</string>
    <string name="drawerClose">Drawer close</string>
    <string name="registerButtonText">Create account</string>
    <string name="emailTextViewHint">E-mail</string>
    <string name="passwordTextViewHint">Password</string>
    <string name="confirmPasswordTextViewHint">Confirm password</string>
    <string name="logoDescriptor">Logo of F-Space</string>
    <string name="loginButtonText">Login</string>
    <string name="linkToRegistrationText">Don\'t have an account? Create new one</string>
    <string name="linkToLoginText">Already have an account? Login to space</string>
    <string name="externalLoginOption">Login using an external option</string>
    <string name="setupUsernameMultilineText">Username</string>
    <string name="setupFullnameMultilineText">Full Name</string>
    <string name="setupCountryMultilineText">Country</string>
    <string name="setupConfirmButtonTextValue">Confirm</string>
</resources>