<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationPost"
        android:title="@string/addNewPost"
        android:icon="@drawable/add_icon"/>

    <item
        android:id="@+id/navigationProfile"
        android:title="@string/myProfile"
        android:icon="@drawable/profile_icon"/>

    <item
        android:id="@+id/navigationHome"
        android:title="@string/homepage"
        android:icon="@drawable/home_icon"/>

    <item
        android:id="@+id/navigationFriends"
        android:title="@string/friends"
        android:icon="@drawable/friend_icon"/>

    <item
        android:id="@+id/navigationSearchFriends"
        android:title="@string/searchFriend"
        android:icon="@drawable/search_icon"/>

    <item
        android:id="@+id/navigationMessages"
        android:title="@string/messages"
        android:icon="@drawable/message_icon"/>

    <item
        android:id="@+id/navigationSettings"
        android:title="@string/settings"
        android:icon="@drawable/settings_icon"/>

    <item
        android:id="@+id/navigationLogout"
        android:title="@string/logout"
        android:icon="@drawable/logout_icon"/>

</menu>