<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupActivity"
    android:background="@color/colorAccent">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setupProfilePicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/blank_picture" />

    <EditText
        android:id="@+id/setupUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setupProfilePicture"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        android:hint="@string/setupUsernameMultilineText"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/username_icon"/>

    <EditText
        android:id="@+id/setupFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setupUsername"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        android:hint="@string/setupFullnameMultilineText"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/fullname_icon"/>

    <EditText
        android:id="@+id/setupCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setupFullname"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"
        android:hint="@string/setupCountryMultilineText"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/country_icon"/>

    <Button
        android:id="@+id/setupConfirmButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/setupCountry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttons"
        android:fontFamily="monospace"
        android:text="@string/setupConfirmButtonTextValue"
        android:textSize="20sp" />

</RelativeLayout>